--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,4 @@
 manifest {
     description = 'SNP caller from bisulphite sequence data.'
-    nextflowVersion = '...'
+    nextflowVersion = '22.04.0'
 }
