--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,5 @@
 manifest {
     description = 'SNP caller from bisulphite sequence data.'
     nextflowVersion = '22.04.0'
+    process.executor = 'slurm'
 }
