modified config files

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,4 @@
-manifest {
-    description = 'SNP caller from bisulphite sequence data.'
-    nextflowVersion = '22.04.0'
-    executor = 'slurm'
-}
+description = 'SNP caller from bisulphite sequence data.'
+nextflowVersion = '22.04.0'
+process.executor = 'slurm'
+
