--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,27 @@
 description = 'SNP caller from bisulphite sequence data.'
 nextflowVersion = '22.04.0'
-process.executor = 'slurm'
+process.executor = 'slurm'  // Comment out if not running on HPC with SLURM scheduler.
 
+
+process{
+    withName: FAST_QC{
+        memory= 20.GB
+        time= '1h'
+    }
+
+    withName: TRIM{
+        memory= 20.GB
+        time= '1h'
+    }
+
+    withName: INDEX{
+        memory = 100.GB
+        time = '1day'
+    }
+
+    withName: ALIGNMENT{
+        memory= 100.GB
+        time= '1day'
+    }
+
+}
