--- a/nextflow.config
+++ b/nextflow.config
@@ -2,26 +2,31 @@ description = 'SNP caller from bisulphite sequence data.'
 nextflowVersion = '22.04.0'
 process.executor = 'slurm'  // Comment out if not running on HPC with SLURM scheduler.
 
+qos_usr="bbdefault"
 
 process{
     withName: FAST_QC{
         memory= 20.GB
         time= '1h'
+        clusterOptions="--qos=${qos_usr}"
     }
 
     withName: TRIM{
         memory= 20.GB
         time= '1h'
+        clusterOptions="--qos=${qos_usr}"
     }
 
     withName: INDEX{
         memory = 100.GB
         time = '1day'
+        clusterOptions="--qos=${qos_usr}"
     }
 
     withName: ALIGNMENT{
         memory= 100.GB
         time= '1day'
+        clusterOptions="--qos=${qos_usr}"
     }
 
 }
