removed unused directories

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ description = 'SNP caller from bisulphite sequence data.'
 nextflowVersion = '22.04.0'
 process.executor = 'slurm'  // Comment out if not running on HPC with SLURM scheduler.
 
+// Change SLURM parameters according to your analysis 
 qos_usr="bbdefault"
 
 process{
