--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ process.executor = 'slurm'  // Comment out if not running on HPC with SLURM sche
 custom_options="--qos=bbdefault"
 
 
-// example on how to use clusterOptions:  clusterOptions = '-q debug -t 00:30:00 -C cpu'
+// example on how to use clusterOptions:  clusterOptions = '-q default -t 00:30:00 -C cpu' or clusterOptions = '--qos=default --time=00:30:00'
 
 process{
     withName: FAST_QC{
