--- a/nextflow.config
+++ b/nextflow.config
@@ -12,25 +12,25 @@ process{
     withName: FAST_QC{
         memory= 20.GB
         time= '1h'
-        clusterOptions="${custom_options}"
+        clusterOptions=${custom_options}
     }
 
     withName: TRIM{
         memory= 20.GB
         time= '1h'
-        clusterOptions="${custom_options}"
+        clusterOptions=${custom_options}
     }
 
     withName: INDEX{
         memory = 100.GB
         time = '1day'
-        clusterOptions="${custom_options}"
+        clusterOptions=${custom_options}
     }
 
     withName: ALIGNMENT{
         memory= 100.GB
         time= '1day'
-        clusterOptions="${custom_options}"
+        clusterOptions=${custom_options}
     }
 
 }
