process added: PICARD, SAMTOOLS, BisSNP. Added BISNP jar file in ./tools

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,4 +33,22 @@ process{
         clusterOptions=${custom_options}
     }
 
+     withName: PICARD{
+        memory= 50.GB
+        time= '1day'
+        clusterOptions=${custom_options}
+    }
+
+     withName: SAMTOOLS{
+        memory= 50.GB
+        time= '1day'
+        clusterOptions=${custom_options}
+    }
+
+    withName: BIS_SNP{
+        memory= 50.GB
+        time= '1day'
+        clusterOptions=${custom_options}
+    }
+
 }
