--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ process{
     withName: FAST_QC{
         memory= 20.GB
         time= '1h'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
     withName: TRIM{
