--- a/nextflow.config
+++ b/nextflow.config
@@ -18,37 +18,37 @@ process{
     withName: TRIM{
         memory= 20.GB
         time= '1h'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
     withName: INDEX{
         memory = 100.GB
         time = '1day'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
     withName: ALIGNMENT{
         memory= 100.GB
         time= '1day'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
      withName: PICARD{
         memory= 50.GB
         time= '1day'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
      withName: SAMTOOLS{
         memory= 50.GB
         time= '1day'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
     withName: BIS_SNP{
         memory= 50.GB
         time= '1day'
-        clusterOptions=${custom_options}
+        clusterOptions="${custom_options}"
     }
 
 }
