--- a/nextflow.config
+++ b/nextflow.config
@@ -39,7 +39,7 @@ process{
         clusterOptions="${custom_options}"
     }
 
-     withName: SAMTOOLS{
+     withName: SORTING{
         memory= 50.GB
         time= '1day'
         clusterOptions="${custom_options}"
