--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ custom_options="--qos=bbdefault"
 
 
 // Example on how to use clusterOptions:  clusterOptions = '-q default -t 00:30:00 -C cpu' or clusterOptions = '--qos=default --time=00:30:00'
-
+// Ensure between each option there is a space. See the examples above or link: https://t-neumann.github.io/pipelines/Nextflow-pipeline/ 
 process{
     withName: FAST_QC{
         memory= 20.GB
