added CGmaptools functionalities

--- a/nextflow.config
+++ b/nextflow.config
@@ -51,4 +51,16 @@ process{
         clusterOptions="${custom_options}"
     }
 
+     withName: CGMAP_PREP{
+        memory= 50.GB
+        time= '2day'
+        clusterOptions="${custom_options}"
+    }
+
+    withName: CGMAP_TOOLS{
+        memory= 50.GB
+        time= '2day'
+        clusterOptions="${custom_options}"
+    }
+
 }
