--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,19 @@
 description = 'SNP caller from bisulphite sequence data.'
 nextflowVersion = '22.04.0'
-process.executor = 'slurm'  // Comment out if not running on HPC with SLURM scheduler.
+process.executor = 'slurm'  //Allows to execute pipeline with SLURM. Comment out if not running on HPC with SLURM scheduler.
 
-// Change SLURM parameters according to your analysis 
+/* Change SLURM parameters according to your analysis
+ Example on how to use clusterOptions:  clusterOptions = '-q default -t 00:30:00 -C cpu' or clusterOptions = '--qos=default --time=00:30:00'
+ Ensure between each option there is a space. See the examples above or link: https://t-neumann.github.io/pipelines/Nextflow-pipeline/  
+*/
+
 custom_options="--qos=bbdefault"
 
+/*
+Next options allow to tune memory requirements and time available for each process.
+More parameters can be can be changed, see documentation for (Scope executor): https://www.nextflow.io/docs/latest/config.html 
+*/
 
-// Example on how to use clusterOptions:  clusterOptions = '-q default -t 00:30:00 -C cpu' or clusterOptions = '--qos=default --time=00:30:00'
-// Ensure between each option there is a space. See the examples above or link: https://t-neumann.github.io/pipelines/Nextflow-pipeline/ 
 process{
     withName: FAST_QC{
         memory= 20.GB
