--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 description = 'SNP caller from bisulphite sequence data.'
 nextflowVersion = '22.04.0'
-process.executor = 'slurm'  //Allows to execute pipeline with SLURM. Comment out if not running on HPC with SLURM scheduler.
-
+//process.executor = 'slurm'  //Allows to execute pipeline with SLURM. Comment out if not running on HPC with SLURM scheduler.
+process.executor = 'local'
 /* Change SLURM parameters according to your analysis
  Example on how to use clusterOptions:  clusterOptions = '-q default -t 00:30:00 -C cpu' or clusterOptions = '--qos=default --time=00:30:00'
  Ensure between each option there is a space. See the examples above or link: https://t-neumann.github.io/pipelines/Nextflow-pipeline/  
